--- a/frontend-cemos/public/assets/content/politica/9-decreto-12363/1.md
+++ b/frontend-cemos/public/assets/content/politica/9-decreto-12363/1.md
@@ -1,27 +1,27 @@
 # DECRETO Nº 12.363, DE 17 DE JANEIRO DE 2025
 
- Aprova o XI Plano Setorial para os Recursos do Mar.
+Aprova o XI Plano Setorial para os Recursos do Mar.
 
-     O PRESIDENTE DA REPÚBLICA, no uso das atribuições que lhe confere o art. 84, caput, inciso VI, alínea "a", da Constituição,
+O PRESIDENTE DA REPÚBLICA, no uso das atribuições que lhe confere o art. 84, caput, inciso VI, alínea "a", da Constituição,
 
-     DECRETA:
+DECRETA:
 
-     Art. 1º Fica aprovado o XI Plano Setorial para os Recursos do Mar, na forma do Anexo, com o objetivo de definir as diretrizes e as prioridades para o setor no período de 2024 a 2027.
+Art. 1º Fica aprovado o XI Plano Setorial para os Recursos do Mar, na forma do Anexo, com o objetivo de definir as diretrizes e as prioridades para o setor no período de 2024 a 2027.
 
-     Art. 2º A Comissão Interministerial para os Recursos do Mar manterá, em seu sítio eletrônico, informações quanto ao progresso dos indicadores do XI Plano Setorial para os Recursos do Mar.
+Art. 2º A Comissão Interministerial para os Recursos do Mar manterá, em seu sítio eletrônico, informações quanto ao progresso dos indicadores do XI Plano Setorial para os Recursos do Mar.
 
-     Art. 3º Fica revogado o Decreto nº 10.544, de 16 de novembro de 2020.
+Art. 3º Fica revogado o Decreto nº 10.544, de 16 de novembro de 2020.
 
-     Art. 4º Este Decreto entra em vigor na data de sua publicação.
+Art. 4º Este Decreto entra em vigor na data de sua publicação.
 
-     Brasília, 17 de janeiro de 2025; 204º da Independência e 137º da República.
+Brasília, 17 de janeiro de 2025; 204º da Independência e 137º da República.
 
 
 ## ANEXO - XI PLANO SETORIAL PARA OS RECURSOS DO MAR
 
 ## 1. INTRODUÇÃO
 
-O XI Plano Setorial para os Recursos do Mar - XI PSRM tem o propósito de contribuir para a consecução dos objetivos estabelecidos pela Política Nacional para os Recursos do Mar - PNRM, por intermédio de ações destinadas à pesquisa científica e ao desenvolvimento tecnológico; à conservação e ao uso sustentável dos recursos marinhos vivos e não vivos; à prevenção e à mitigação dos impactos negativos causados pela poluição; ao monitoramento oceanográfico e do clima; à formação de recursos humanos em Ciências do Mar ; à implementação da economia azul ; à governança do espaço marinho ; e ao fortalecimento da cultura oceânica e da mentalidade marítima , conduzidas e coordenadas por representantes dos Ministérios, da comunidade científica e da Marinha do Brasil, de modo a gerar benefícios para toda a sociedade brasileira. As ações também contribuem para a soberania e a governança integrada do Mar Territorial, da Zona Econômica Exclusiva e da Plataforma Continental.
+O XI Plano Setorial para os Recursos do Mar (XI PSRM) tem o propósito de contribuir para a consecução dos objetivos estabelecidos pela Política Nacional para os Recursos do Mar - PNRM, por intermédio de ações destinadas à pesquisa científica e ao desenvolvimento tecnológico; à conservação e ao uso sustentável dos recursos marinhos vivos e não vivos; à prevenção e à mitigação dos impactos negativos causados pela poluição; ao monitoramento oceanográfico e do clima; à formação de recursos humanos em Ciências do Mar ; à implementação da economia azul ; à governança do espaço marinho ; e ao fortalecimento da cultura oceânica e da mentalidade marítima , conduzidas e coordenadas por representantes dos Ministérios, da comunidade científica e da Marinha do Brasil, de modo a gerar benefícios para toda a sociedade brasileira. As ações também contribuem para a soberania e a governança integrada do Mar Territorial, da Zona Econômica Exclusiva e da Plataforma Continental.
 
 O XI PSRM congrega interesses e esforços multissetoriais dos Ministérios e da Marinha do Brasil representados na Comissão Interministerial para os Recursos do Mar - CIRM, coaduna-se com a Estratégia Federal de Desenvolvimento para o Brasil relativa ao período de 2020 a 2031 e mantém conexão com o Plano Plurianual 2024-2027 do Governo federal, além de servir como instrumento de comunicação à sociedade das ações governamentais relativas ao ambiente marinho e aos recursos do mar.
 
@@ -90,14 +90,12 @@ Com base nos princípios básicos da PNRM, a abrangência geográfica do XI PSRM
 
 Os objetivos do XI PSRM serão atingidos por meio das seguintes ações:
 
-5.1. Pesquisas Científicas nas Ilhas Oceânicas - Proilhas (Organização coordenadora: Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar)
+**5.1. Pesquisas Científicas nas Ilhas Oceânicas - Proilhas (Organização coordenadora: Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar)**
 
 5.1.1. Objetivo
 
 Desenvolver pesquisa científica no Arquipélago de São Pedro e São Paulo, nas Ilhas de Trindade
-e Martin Vaz e no Arquipélago de Fernando de Noronha, após a implantação de uma estação científica
-nesse local, e nas respectivas áreas marinhas adjacentes, de forma a gerar conhecimento relevante para,
-entre outras aplicações, subsidiar o processo de gestão relacionado a essas regiões do território nacional.
+e Martin Vaz e no Arquipélago de Fernando de Noronha, após a implantação de uma estação científica nesse local, e nas respectivas áreas marinhas adjacentes, de forma a gerar conhecimento relevante para, entre outras aplicações, subsidiar o processo de gestão relacionado a essas regiões do território nacional.
 
 5.1.2. Metas
 a) ampliar para R$ 10.000.000,00 (dez milhões de reais) os recursos alocados a projetos de pesquisa em desenvolvimento no âmbito do Programa de Pesquisas Científicas na Ilha da Trindade - Protrindade e do Programa Arquipélago de São Pedro e São Paulo - Proarquipelago (ODS 14.a);
@@ -110,7 +108,6 @@ c) implantar uma estação científica no Arquipélago de Fernando de Noronha.
 | Taxa anual de ocupação do Arquipélago de São Pedro e São Paulo. <br> **Fonte:** Marinha do Brasil | % | 100 | 100 |
 | Taxa de implementação da estação científica do Arquipélago de Fernando de Noronha. <br> **Fonte:** Marinha do Brasil | % | 8 | 100 |
 
-
 5.1.3. Produtos
 
 a) legitimação da Zona Econômica Exclusiva e da Plataforma Continental do Arquipélago de São Pedro e São Paulo;
@@ -121,7 +118,7 @@ c) estação científica implantada no Arquipélago de Fernando de Noronha.
 
 À Marinha do Brasil, por intermédio da Secretaria da Comissão Interministerial para os Recursos do Mar, coordenadora da Ação Proilhas, compete subsidiar a ação orçamentária do Projeto de Lei Orçamentária Anual - PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.2. Avaliação, Monitoramento e Conservação da Biodiversidade Marinha - Revimar (Organização coordenadora: Ministério do Meio Ambiente e Mudança do Clima)
+**5.2. Avaliação, Monitoramento e Conservação da Biodiversidade Marinha - Revimar (Organização coordenadora: Ministério do Meio Ambiente e Mudança do Clima)**
 
 5.2.1. Objetivo
 
@@ -157,7 +154,7 @@ i) materiais de treinamento para os envolvidos no programa Revimar.
 
 Ao Ministério do Meio Ambiente e Mudança do Clima, coordenador da ação Revimar, com apoio do Instituto Brasileiro do Meio Ambiente e dos Recursos Naturais Renováveis e do Instituto Chico Mendes de Conservação da Biodiversidade, compete subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.3. Aquicultura e Pesca - Aquipesca (Organização coordenadora: Ministério da Pesca e Aquicultura)
+**5.3. Aquicultura e Pesca - Aquipesca (Organização coordenadora: Ministério da Pesca e Aquicultura)**
 
 5.3.1. Objetivo
 
@@ -218,7 +215,7 @@ l) iniciativas de prevenção à pesca ilegal, não declarada e não regulamenta
 
 Ao Ministério da Pesca e Aquicultura, coordenador da ação Aquipesca, compete subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.4. Economia Azul (Organização coordenadora: Ministério da Ciência, Tecnologia e Inovação)
+**5.4. Economia Azul (Organização coordenadora: Ministério da Ciência, Tecnologia e Inovação)**
 
 5.4.1. Objetivo
 
@@ -249,7 +246,7 @@ b) estratégia nacional baseada em ciência, tecnologia e inovação para a econ
 
 Ao Ministério da Ciência, Tecnologia e Inovação, coordenador da ação Economia Azul, compete coordenar a intersetorialidade e a geração dos produtos previstos, além de subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação serão provenientes dos órgãos setoriais, poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.5. Avaliação da Potencialidade Mineral da Plataforma Continental Jurídica Brasileira - Remplac (Organização coordenadora: Ministério de Minas e Energia)
+**5.5. Avaliação da Potencialidade Mineral da Plataforma Continental Jurídica Brasileira - Remplac (Organização coordenadora: Ministério de Minas e Energia)**
 
 5.5.1. Objetivo
 
@@ -282,7 +279,7 @@ d) produção de dados geológicos, geofísicos, oceanográficos ou biológicos 
 
 Ao Ministério de Minas e Energia, coordenador da ação Remplac, compete subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.6. Prospecção e Exploração de Recursos Minerais da Área Internacional do Atlântico Sul e Equatorial - Proarea (Organização coordenadora: Ministério das Relações Exteriores)
+**5.6. Prospecção e Exploração de Recursos Minerais da Área Internacional do Atlântico Sul e Equatorial - Proarea (Organização coordenadora: Ministério das Relações Exteriores)**
 
 5.6.1. Objetivo
 
@@ -318,7 +315,7 @@ f) adoção das medidas sob responsabilidade do poder executivo federal processo
 
 Ao Ministério das Relações Exteriores, com apoio do Ministério de Minas e Energia, coordenador da ação Proarea, compete subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.7. Sistema Brasileiro de Observação dos Oceanos e Estudos do Clima - GOOS-Brasil (Organização coordenadora: Marinha do Brasil, por meio da Diretoria de Hidrografia e Navegação)
+**5.7. Sistema Brasileiro de Observação dos Oceanos e Estudos do Clima - GOOS-Brasil (Organização coordenadora: Marinha do Brasil, por meio da Diretoria de Hidrografia e Navegação)**
 
 5.7.1. Objetivo
 
@@ -367,7 +364,7 @@ ix. instrumentalização de animais com transmissores e boias com receptores.
 
 À Marinha do Brasil, por meio da Diretoria de Hidrografia e Navegação, compete coordenar o GOOS-Brasil, cuja ação orçamentária do PLOA será subsidiada pela Secretaria da Comissão Interministerial para os Recursos do Mar. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.8. Formação de Recursos Humanos em Ciências do Mar - PPG-Mar (Organização coordenadora: Ministério da Educação)
+**5.8. Formação de Recursos Humanos em Ciências do Mar - PPG-Mar (Organização coordenadora: Ministério da Educação)**
 
 5.8.1. Objetivo
 
@@ -402,7 +399,7 @@ b) livros com material didático sobre temas de cultura oceânica para distribui
 
 Ao Ministério da Educação, coordenador da ação PPG-Mar, compete subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.9. Planejamento Espacial Marinho - PEM (Organizações coordenadoras: Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar, e Ministério do Meio Ambiente e Mudança do Clima)
+**5.9. Planejamento Espacial Marinho - PEM (Organizações coordenadoras: Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar, e Ministério do Meio Ambiente e Mudança do Clima)**
 
 5.9.1. Objetivo
 
@@ -454,7 +451,7 @@ m) promoção da segurança jurídica para as atividades desenvolvidas no ambien
 
 À Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar, e ao Ministério do Meio Ambiente e Mudança do Clima, coordenadores da ação PEM, compete subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.10. Desenvolvimento e Uso Sustentável da Amazônia Azul - Pro Amazônia Azul (Organização coordenadora: Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar)
+**5.10. Desenvolvimento e Uso Sustentável da Amazônia Azul - Pro Amazônia Azul (Organização coordenadora: Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar)**
 
 5.10.1. Objetivos
 
@@ -475,7 +472,6 @@ c) realizar, no mínimo, doze campanhas oceanográficas em navios de pesquisa al
 | Número de oceanógrafos, geógrafos, biólogos, geólogos e outros pesquisadores brasileiros embarcados nas campanhas oceanográficas realizadas por navios de pesquisa alocados ao Pro Amazônia Azul durante a vigência do plano. <br> **Fonte:** Ministério da Ciência, Tecnologia e Inovação | UN | 15 | 60 |
 | Número de campanhas oceanográficas realizadas por navios de pesquisa alocados ao Pro Amazônia Azul durante a vigência do plano. <br> **Fonte:** Secretaria da Comissão Interministerial para os Recursos do Mar | UN | 3 | 12 |
 
-
 5.10.3. Produtos
 
 a) aperfeiçoamento técnico de oceanógrafos embarcados; e
@@ -485,7 +481,7 @@ b) provimento de informações científicas coletadas na Amazônia Azul em apoio
 
 À Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar, coordenadora da ação Pro Amazônia Azul, compete subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.11. Promoção da Mentalidade Marítima - Promar (Organização coordenadora: Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar)
+**5.11. Promoção da Mentalidade Marítima - Promar (Organização coordenadora: Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar)**
 
 5.11.1. Objetivo
 
@@ -512,7 +508,7 @@ b) mapas do IBGE com a inclusão da Amazônia Azul.
 
 À Marinha do Brasil, por meio da Secretaria da Comissão Interministerial para os Recursos do Mar, coordenadora da Ação Promar, compete subsidiar a ação orçamentária do PLOA relativa a essa atividade. Os recursos necessários para executar a ação poderão ser complementados pelas demais instituições envolvidas e por emendas parlamentares e poderão ser suplementados com a colaboração de agências de fomento da pesquisa e parcerias nacionais e internacionais.
 
-5.12. Desenvolvimento Sustentável (Organização coordenadora: Ministério da Ciência, Tecnologia e Inovação)
+**5.12. Desenvolvimento Sustentável (Organização coordenadora: Ministério da Ciência, Tecnologia e Inovação)**
 
 5.12.1. Objetivo
 
@@ -582,18 +578,16 @@ e) incentivar a integração entre os programas nacionais e internacionais que t
 
 Notas:
 
-1. Ciências do Mar: área do saber que se dedica à produção e à disseminação de conhecimentos sobre os componentes, os processos e os recursos do ambiente marinho e das zonas de transição, o que implica dizer que o seu centro de interesse são os elementos naturais (natureza) e os elementos socioculturais (estruturas sociais e os produtos culturais) que constituem tal ambiente, assim como as interações entre os referidos elementos produzidas pelo trabalho humano (natureza transformada). A compreensão da expressão "Ciências do Mar", que emerge da abordagem do meio ambiente marinho e de suas zonas de transição em sua totalidade - elementos naturais, socioculturais e suas interações - perpassa todas as ações que integram o XI PSRM.
+ **1. Ciências do Mar:** área do saber que se dedica à produção e à disseminação de conhecimentos sobre os componentes, os processos e os recursos do ambiente marinho e das zonas de transição, o que implica dizer que o seu centro de interesse são os elementos naturais (natureza) e os elementos socioculturais (estruturas sociais e os produtos culturais) que constituem tal ambiente, assim como as interações entre os referidos elementos produzidas pelo trabalho humano (natureza transformada). A compreensão da expressão "Ciências do Mar", que emerge da abordagem do meio ambiente marinho e de suas zonas de transição em sua totalidade - elementos naturais, socioculturais e suas interações - perpassa todas as ações que integram o XI PSRM.
 
-2. Economia azul: conceito dinâmico que abrange princípios e práticas que visam à exploração responsável e equilibrada do oceano, com foco na conservação da biodiversidade e nos serviços ecossistêmicos, garantindo não somente o desenvolvimento econômico, mas que os benefícios gerados sejam distribuídos de forma justa e que as comunidades costeiras e dependentes dos recursos marinhos sejam envolvidas e beneficiadas. Se, por um lado, instrumenta as atividades marítimas e o uso dos recursos e serviços marinhos com base nos princípios da sustentabilidade ambiental e justiça social, por outro, provoca crescente preocupação com a saúde dos oceanos, principalmente para assegurar tais serviços às futuras gerações.
+ **2. Economia azul:** conceito dinâmico que abrange princípios e práticas que visam à exploração responsável e equilibrada do oceano, com foco na conservação da biodiversidade e nos serviços ecossistêmicos, garantindo não somente o desenvolvimento econômico, mas que os benefícios gerados sejam distribuídos de forma justa e que as comunidades costeiras e dependentes dos recursos marinhos sejam envolvidas e beneficiadas. Se, por um lado, instrumenta as atividades marítimas e o uso dos recursos e serviços marinhos com base nos princípios da sustentabilidade ambiental e justiça social, por outro, provoca crescente preocupação com a saúde dos oceanos, principalmente para assegurar tais serviços às futuras gerações.
 
-3. Espaço marinho: compreende o Mar Territorial, a Zona Econômica Exclusiva e a Plataforma Continental.
+ **3. Espaço marinho:** compreende o Mar Territorial, a Zona Econômica Exclusiva e a Plataforma Continental.
 
-4. Cultura oceânica: conceito criado nos Estados Unidos e influenciado por países como Canadá e países europeus, cujo conteúdo pode ser sintetizado como "a influência do oceano em nós e nossa influência sobre o oceano". Segundo a Organização das Nações Unidas para a Educação, a Ciência e a Cultura -Unesco, a cultura oceânica se baseia em sete princípios: "A Terra tem um Oceano global e muito diverso"; "O Oceano e a vida marinha têm uma forte ação na dinâmica da Terra"; "O Oceano exerce uma influência importante no clima"; "O Oceano permite que a Terra seja habitável"; "O Oceano suporta uma imensa diversidade de vida e de ecossistemas"; "O Oceano e a humanidade estão fortemente interligados"; e "Há muito por descobrir e explorar no Oceano". A cultura oceânica é um conceito dinâmico adaptável às
-peculiaridades de cada país.
+ **4. Cultura oceânica:** conceito criado nos Estados Unidos e influenciado por países como Canadá e países europeus, cujo conteúdo pode ser sintetizado como "a influência do oceano em nós e nossa influência sobre o oceano". Segundo a Organização das Nações Unidas para a Educação, a Ciência e a Cultura -Unesco, a cultura oceânica se baseia em sete princípios: "A Terra tem um Oceano global e muito diverso"; "O Oceano e a vida marinha têm uma forte ação na dinâmica da Terra"; "O Oceano exerce uma influência importante no clima"; "O Oceano permite que a Terra seja habitável"; "O Oceano suporta uma imensa diversidade de vida e de ecossistemas"; "O Oceano e a humanidade estão fortemente interligados"; e "Há muito por descobrir e explorar no Oceano". A cultura oceânica é um conceito dinâmico adaptável às peculiaridades de cada país.
 
-5. Mentalidade marítima: modo de pensar característico da sociedade sobre a importância do mar e das águas interiores para a vida dos brasileiros e para o desenvolvimento nacional.
+ **5. Mentalidade marítima:** modo de pensar característico da sociedade sobre a importância do mar e das águas interiores para a vida dos brasileiros e para o desenvolvimento nacional.
 
-6. Amazônia Azul: conceito político-estratégico dos espaços marítimos relacionados ao País, compreendendo o mar, o leito e o subsolo marinhos na extensão atlântica que se projeta a partir do litoral até o limite exterior da Plataforma Continental brasileira.
+ **6. Amazônia Azul:** conceito político-estratégico dos espaços marítimos relacionados ao País, compreendendo o mar, o leito e o subsolo marinhos na extensão atlântica que se projeta a partir do litoral até o limite exterior da Plataforma Continental brasileira.
 
-7. Variáveis oceânicas essenciais: grupo de variáveis físicas, químicas ou biológicas que, juntas, contribuem para caracterizar o clima e a saúde do oceano. 
-
+ **7. Variáveis oceânicas essenciais:** grupo de variáveis físicas, químicas ou biológicas que, juntas, contribuem para caracterizar o clima e a saúde do oceano. 
